--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nodemon": "^2.0.6"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "connect-mongo": "^3.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
