--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "connect-mongo": "^3.2.0",
+    "crypto-random-string": "^3.3.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "mongoose": "^5.11.8",
