--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "mongoose": "^5.11.8",
+    "mongoose-unique-validator": "^2.0.3",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0"
   }
