--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^5.11.8",
     "mongoose-unique-validator": "^2.0.3",
     "passport": "^0.4.1",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "socket.io": "^3.1.0"
   }
 }
