--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "crypto-random-string": "^3.3.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "group": "^1.0.2",
     "mongoose": "^5.11.8",
     "mongoose-unique-validator": "^2.0.3",
     "passport": "^0.4.1",
